--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)">
+  <link rel="stylesheet" href="style/common.css" type="text/css">
   <!--共通CSS-->
-  <link rel="stylesheet" href="style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1150px)">
-  <!--共通CSS-->
-  <link rel="stylesheet" href="style/common.css" type="text/css" media="screen and (min-width:1150px)">
-  <!--共通CSS-->
-  <link rel="stylesheet" href="style/indexMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)">
-  <!--index用CSS-->
-  <link rel="stylesheet" href="style/indexMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1150px)">
-  <!--index用CSS-->
-  <link rel="stylesheet" href="style/index.css" type="text/css" media="screen and (min-width:1150px)">
+  <link rel="stylesheet" href="style/index.css" type="text/css">
   <!--index用CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="img/icon.png" sizes="32x32" />
@@ -155,6 +147,7 @@
 
   <!--footer-->
   <div class="footer">
+
     <img src="img/footer.png">
     <a href="html/site.html">
       <p><span id="site">このサイトについて</span></p>
