bug fixes,slider swipeable

--- a/en/index.html
+++ b/en/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <h1 id="slider-title">LIVING WITH FRIENDS</h1>
-    <div class="slider">
+    <div id="slider">
       <ul class="slider-inner">
       </ul>
       <ul class="nav">
