--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
 
     <h1 id="slider-title">仲間とともに生活</h1>
-    <div class="slider">
+    <div id="slider">
       <ul class="slider-inner">
       </ul>
       <ul class="nav">
