change the method of loading short movie.

--- a/en/index.html
+++ b/en/index.html
@@ -130,8 +130,10 @@
 
     <div id="movie">
       <h2><span>Short Movie</span></h2>
-      <iframe id="inner-video" src="https://www.youtube.com/embed/RhxgednKg8Y" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3>Tap the image to play the short movie.</h3>
+      <div class="youtube">
+        <iframe id="inner-video" data-src="https://www.youtube.com/embed/RhxgednKg8Y"></iframe>
+      </div>
     </div>
 
     <div id="links">
