--- a/index.html
+++ b/index.html
@@ -128,8 +128,10 @@
 
     <div id="movie">
       <h2><span>Short Movie</span></h2>
-      <iframe id="inner-video" src="https://www.youtube.com/embed/RhxgednKg8Y" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3>画像を押すと再生できます。</h3>
+      <div class="youtube">
+        <iframe id="inner-video" data-src="https://www.youtube.com/embed/RhxgednKg8Y"></iframe>
+      </div>
     </div>
 
     <div id="links">
