--- a/html/contact.html
+++ b/html/contact.html
@@ -38,6 +38,23 @@
   <meta property="twitter:site" content="@TakajoDormitory">
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
+  <style>
+    @media screen and (max-width: 870px) {
+      #contact {
+        width: 250px;
+        margin: auto;
+        margin-top: 50px;
+      }
+    }
+
+    @media screen and (min-width: 870px) {
+      #contact {
+        margin-left: 60vw;
+        margin-top: 50px;
+      }
+
+    }
+  </style>
 </head>
 
 <body>
