--- a/html/cost.html
+++ b/html/cost.html
@@ -76,35 +76,34 @@
     </nav>
   </div>
   <!--container-->
-  <div id="container">
-    <table class="table table-striped">
-      <tbody class="text-center">
-        <tr>
-          <th scope="row">寄宿料</th>
-          <td>月額</td>
-          <td>700円</td>
-        </tr>
-        <tr>
-          <th scope="row">食費(1日3食)</th>
-          <td>月額</td>
-          <td>37,200円</td>
-        </tr>
-        <tr>
-          <th scope="row">寮費(光熱水費等)</th>
-          <td>月額</td>
-          <td>7,500円</td>
-        </tr>
-        <tr>
-          <th scope="row">入寮費</th>
-          <td>入寮時</td>
-          <td>1,000円</td>
-        </tr>
-        <tr>
-          <th scope="row">寮生会費</th>
-          <td>年額</td>
-          <td>1,500円</td>
-        </tr>
-      </tbody>
+  <div id="container" class="middle">
+    <h1>学寮経費</h1>
+    <table>
+      <tr>
+        <th>寄宿料</th>
+        <td>月額</td>
+        <td>700円</td>
+      </tr>
+      <tr>
+        <th>食費(1日3食)</th>
+        <td>月額</td>
+        <td>37,200円</td>
+      </tr>
+      <tr>
+        <th>寮費(光熱水費等)</th>
+        <td>月額</td>
+        <td>7,500円</td>
+      </tr>
+      <tr>
+        <th>入寮費</th>
+        <td>入寮時</td>
+        <td>1,000円</td>
+      </tr>
+      <tr>
+        <th>寮生会費</th>
+        <td>年額</td>
+        <td>1,500円</td>
+      </tr>
     </table>
   </div>
 
