--- a/html/facility.html
+++ b/html/facility.html
@@ -36,6 +36,21 @@
   <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
+  <style>
+    @media screen and (min-width: 870px) {
+      #top_image {
+        width: 800px;
+        margin: auto;
+      }
+    }
+
+    @media screen and (max-width: 870px) {
+      #top_image {
+        width: 80vw;
+        margin: auto;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -77,17 +92,18 @@
   </div>
   <!--container-->
   <div id="container">
-    <img width="800px" src="../img/OverView.jpg" alt="寮の外観">
-    <img widht="500px" src="../img/Facility/SingleRoom.jpg" alt="一人部屋の画像">
-    <img widht="500px" src="../img/Facility/DoubleRoom.jpg" alt="二人部屋の画像">
-    <img widht="500px" src="../img/Facility/KitchenSpace.jpg" alt="キッチンスペースの画像">
-    <img widht="500px" src="../img/Facility/LearningRoom.jpg" alt="ラーニングスペースの画像">
-    <img widht="500px" src="../img/Facility/ShowerRoom.jpg" alt="シャワー室の画像">
-    <img widht="500px" src="../img/Facility/Bath.jpg" alt="浴室の画像">
-    <img width="500px" src="../img/Facility/WashingRoom.jpg" alt="洗濯場の画像">
-    <img width="500px" src="../img/Facility/Cafeteria.jpg" alt="食堂の画像">
-    <img width="500px" src="../img/Facility/ElectricBicycle.jpg" alt="電動自転車の画像">
-    <img width="500px" src="../img/Facility/BicycleSpace.jpg" alt="駐輪場の画像">
+    <h1>Facility</h1>
+    <div><img id="top_image" src="../img/OverView.jpg" alt="寮の外観"></div>
+    <img src="../img/Facility/SingleRoom.jpg" alt="一人部屋の画像">
+    <img src="../img/Facility/DoubleRoom.jpg" alt="二人部屋の画像">
+    <img src="../img/Facility/KitchenSpace.jpg" alt="キッチンスペースの画像">
+    <img src="../img/Facility/LearningRoom.jpg" alt="ラーニングスペースの画像">
+    <img src="../img/Facility/ShowerRoom.jpg" alt="シャワー室の画像">
+    <img src="../img/Facility/Bath.jpg" alt="浴室の画像">
+    <img src="../img/Facility/WashingRoom.jpg" alt="洗濯場の画像">
+    <img src="../img/Facility/Cafeteria.jpg" alt="食堂の画像">
+    <img src="../img/Facility/ElectricBicycle.jpg" alt="電動自転車の画像">
+    <img src="../img/Facility/BicycleSpace.jpg" alt="駐輪場の画像">
   </div>
 
   <!--footer-->
