--- a/html/site.html
+++ b/html/site.html
@@ -78,26 +78,26 @@
   <!--container-->
   <div id="container">
     <h2>
-      <div class="border border-primary" style="padding:10px;">本サイトについて</div>
+      <div class="border border-primary">本サイトについて</div>
     </h2>
     <h3>目的</h3>
-    <div class="border-top" style="padding:10px;"> 徳山工業高等専門学校高城寮(以下，高城寮)が設置・運営するウェブサイトは、
+    <div> 徳山工業高等専門学校高城寮(以下，高城寮)が設置・運営するウェブサイトは、
       高城寮の活動を学内外に公開するとともに、寮生の生活を支援する情報を提供することを目的としています。
     </div>
     <!--上ボーダー -->
     <br>
     <h3>著作権</h3>
-    <div class="border-top" style="padding:10px;">高城寮ウェブサイトが提供するコンテンツの著作権は、高城寮に帰属します。
+    <div>高城寮ウェブサイトが提供するコンテンツの著作権は、高城寮に帰属します。
       著作権法が定める範囲を除き、高城寮の許可なく複写・複製，転用，販売などの二次利用をすることを禁止します。
     </div>
     <br>
     <h3>免責事項</h3>
-    <div class="border-top" style="padding:10px;">高城寮ウェブサイトの情報は、事前告知なく変更・削除されます。
+    <div>高城寮ウェブサイトの情報は、事前告知なく変更・削除されます。
       また、正確性には十分配慮しておりますが、高城寮ウェブサイトの情報により生じた不利益について高城寮は責任を負いません。
     </div>
     <br>
     <h3>リンク</h3>
-    <div class="border-top" style="padding:10px;">高城寮ウェブサイトへのリンクは自由にしていただいて構いませんが、
+    <div>高城寮ウェブサイトへのリンクは自由にしていただいて構いませんが、
       urlの変更・削除について告知いたしません。また、高城寮の活動の趣旨に反するサイト（公序良俗に反する、合法性に懸念があるなど）からの
       リンクを禁止します。
     </div>
