--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <div id="movie">
       <h2><span>Short Movie</span></h2>
-      <h3>画像を押すと再生できます。</h3>
+      <h3>画像を押して再生</h3>
       <div class="youtube">
         <iframe id="inner-video" data-src="https://www.youtube.com/embed/RhxgednKg8Y"></iframe>
       </div>
