--- a/html/event.html
+++ b/html/event.html
@@ -77,12 +77,11 @@
   </div>
   <!--container-->
   <div id="container">
-    <div class="row">
-      <div class="col">
-        <!--左側-->
+    <div class="pair-left">
+      <img src="../img/OverViewSky.JPG">
+      <div>
         <h4>寮生活</h4>
-        <div class="border-top" style="padding:10px;">
-          <!--上ボーダー -->
+        <p class="container">
           　高城寮では寮を「他人を思いやりながら、自分の価値と価値観を高める場」とし、次のような寮を目指しています。<br>
           ・住みよい安全な寮<br>
           ・勉強のできる寮<br>
@@ -91,115 +90,109 @@
           ・楽しい寮<br>
           ・きれいな寮<br>
           ・規律ある寮<br>
-        </div>
-        <br>
-      </div>
-      <div class="col">
-        <!--右側-->
-        <h4>高城寮の行事</h4>
-        <div class="border-top" style="padding:10px;">
-          <!--上ボーダー -->
-          　高城寮では寮生の自主性を重んじ、寮生活に関わるさまざまな事柄を寮生会が中心となって行っています。
-          年間を通し、新入寮生歓迎マッチや予餞会など各種のイベントが行われていますが、これらのイベントも寮生会が中心となり企画・運営しています。<br>
-          　勉強面では通学生と比較して同級生や上級生に相談しやすい環境だといえるでしょう。また、試験前には食堂にて勉強会を行っています。
-        </div>
-        <br>
-        <!--追加項目はここより下に-->
-
+        </p>
       </div>
     </div>
+    <div class="pair-right">
+      <h4>高城寮の行事</h4>
+      <div>
+        　高城寮では寮生の自主性を重んじ、寮生活に関わるさまざまな事柄を寮生会が中心となって行っています。
+        年間を通し、新入寮生歓迎マッチや予餞会など各種のイベントが行われていますが、これらのイベントも寮生会が中心となり企画・運営しています。<br>
+        　勉強面では通学生と比較して同級生や上級生に相談しやすい環境だといえるでしょう。また、試験前には食堂にて勉強会を行っています。
+      </div>
+      <br>
+      <!--追加項目はここより下に-->
 
-    <table class="table table-striped">
-      <thead class="text-center">
-        <tr>
-          <th scope="col"></th>
-          <th scope="col">主な年間行事</th>
-        </tr>
-      </thead>
-      <tbody class="text-center">
-        <tr>
-          <th scope="row">4月</th>
-          <td>
-            ・入寮式<br>
-            ・前期リーダー研修会<br>
-            ・前期寮生総会<br>
-            ・新入寮生対面式<br>
-            ・新入寮生歓迎マッチ
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">5月</th>
-          <td>
-            ・避難訓練<br>
-            ・勉強会
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">6月</th>
-          <td>
-            ・保護者会<br>
-            ・寮生マッチ
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">7月</th>
-          <td>
-            ・七夕会<br>
-            ・勉強会<br>
-            ・学寮見学会
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">8月</th>
-          <td>・閉寮</td>
-        </tr>
-        <tr>
-          <th scope="row">9月</th>
-          <td>
-            ・開寮<br>
-            ・後期リーダー研修会
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">10月</th>
-          <td>
-            ・後期寮生総会<br>
-            ・保護者会
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">11月</th>
-          <td>
-            ・寮祭<br>
-            ・勉強会<br>
-            ・学寮見学会
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">12月</th>
-          <td>
-            ・予餞会<br>
-            ・閉寮
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">1月</th>
-          <td>
-            ・開寮<br>
-            ・寮生会選挙<br>
-            ・勉強会<br>
-            ・寮生会役員引継会<br>
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">2月</th>
-          <td>
-            ・卒寮会<br>
-            ・閉寮
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    </div>
+  </div>
+
+  <table>
+    <tr>
+      <th scope="col"></th>
+      <th scope="col">主な年間行事</th>
+    </tr>
+    <tr>
+      <th>4月</th>
+      <td>
+        ・入寮式<br>
+        ・前期リーダー研修会<br>
+        ・前期寮生総会<br>
+        ・新入寮生対面式<br>
+        ・新入寮生歓迎マッチ
+      </td>
+    </tr>
+    <tr>
+      <th>5月</th>
+      <td>
+        ・避難訓練<br>
+        ・勉強会
+      </td>
+    </tr>
+    <tr>
+      <th>6月</th>
+      <td>
+        ・保護者会<br>
+        ・寮生マッチ
+      </td>
+    </tr>
+    <tr>
+      <th>7月</th>
+      <td>
+        ・七夕会<br>
+        ・勉強会<br>
+        ・学寮見学会
+      </td>
+    </tr>
+    <tr>
+      <th>8月</th>
+      <td>・閉寮</td>
+    </tr>
+    <tr>
+      <th>9月</th>
+      <td>
+        ・開寮<br>
+        ・後期リーダー研修会
+      </td>
+    </tr>
+    <tr>
+      <th>10月</th>
+      <td>
+        ・後期寮生総会<br>
+        ・保護者会
+      </td>
+    </tr>
+    <tr>
+      <th>11月</th>
+      <td>
+        ・寮祭<br>
+        ・勉強会<br>
+        ・学寮見学会
+      </td>
+    </tr>
+    <tr>
+      <th>12月</th>
+      <td>
+        ・予餞会<br>
+        ・閉寮
+      </td>
+    </tr>
+    <tr>
+      <th>1月</th>
+      <td>
+        ・開寮<br>
+        ・寮生会選挙<br>
+        ・勉強会<br>
+        ・寮生会役員引継会<br>
+      </td>
+    </tr>
+    <tr>
+      <th>2月</th>
+      <td>
+        ・卒寮会<br>
+        ・閉寮
+      </td>
+    </tr>
+  </table>
   </div>
 
   <!--footer-->
