--- a/en/belonging/index.html
+++ b/en/belonging/index.html
@@ -17,7 +17,7 @@
   <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>For Dormitory students | Takajo dormitory</title>
+  <title>Students page | Takajo dormitory</title>
   <!--タイトル-->
   <meta name="description" content="寮公式ホームページです。">
   <!--簡易説明-->
@@ -72,7 +72,7 @@
         <li><a href="../facility.html">Facility</a></li>
         <li><a href="../event.html">Life and Event</a></li>
         <li><a href="../cost.html">About cost</a></li>
-        <li><a href="../belonging/index.html">For Dormitory students</a></li>
+        <li><a href="#">Students page</a></li>
         <li><a href="../contact.html">Contact us</a></li>
       </ul>
     </nav>
@@ -81,7 +81,7 @@
   <div id="container">
     <div class="list">
       <ul>
-        <h2>Site for dormitory students</h2>
+        <h2>Sites for students</h2>
         <a target="_blank" rel="noopener noreferrer" href="https://www.tokuyama.ac.jp/dormitory/kondate.pdf">
           <li>Dormitory Meals Menu</li>
         </a>
