--- a/en/contact.html
+++ b/en/contact.html
@@ -72,7 +72,7 @@
         <li><a href="facility.html">Facility</a></li>
         <li><a href="event.html">Life and Event</a></li>
         <li><a href="cost.html">About cost</a></li>
-        <li><a href="belonging/index.html">For Dormitory students</a></li>
+        <li><a href="belonging/index.html">Students page</a></li>
         <li><a href="contact.html">Contact us</a></li>
       </ul>
     </nav>
