--- a/en/purpose.html
+++ b/en/purpose.html
@@ -4,7 +4,7 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
   <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1450px)">
+  <link rel="stylesheet" href="../style/common.css" type="text/css">
   <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
   <link rel="icon" href="../img/icon.png" sizes="32x32" />
@@ -73,7 +73,7 @@
         <li><a href="facility.html">Facility</a></li>
         <li><a href="event.html">Life and Event</a></li>
         <li><a href="cost.html">About cost</a></li>
-        <li><a href="belonging/index.html">For Dormitory students</a></li>
+        <li><a href="belonging/index.html">Students page</a></li>
         <li><a href="contact.html">Contact us</a></li>
       </ul>
     </nav>
