--- a/en/env.html
+++ b/en/env.html
@@ -17,7 +17,7 @@
   <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Contact us | Takajo dormitory</title>
+  <title>Environment | Takajo dormitory</title>
   <!--タイトル-->
   <meta name="description" content="高城寮公式ホームページです。">
   <!--簡易説明-->
