--- a/en/contact.html
+++ b/en/contact.html
@@ -36,6 +36,23 @@
   <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
+  <style>
+    @media screen and (max-width: 870px) {
+      #contact {
+        width: 250px;
+        margin: auto;
+        margin-top: 50px;
+      }
+    }
+
+    @media screen and (min-width: 870px) {
+      #contact {
+        margin-left: 60vw;
+        margin-top: 50px;
+      }
+
+    }
+  </style>
 </head>
 
 <body>
@@ -79,6 +96,13 @@
   </div>
   <!--container-->
   <div id="container">
+    <p class="middle">If you have any questions or comments, please send them to the dormitory.</p>
+    <div id="contact">
+      <p>Dormitory contact information<br>〒745-8585 Gakuendai, Shunan City, Yamaguchi Prefecture<br>TEL&FAX : 0834-29-6236<br><br>Student Affairs
+        Division<br>TEL :
+        0834-29-6231<br>
+        Email:<a href="mailto:ryoumu＠tokuyama.ac.jp?subject=問い合わせ">ryoumu＠tokuyama.ac.jp</a></p>
+    </div>
   </div>
 
   <!--footer-->
