--- a/en/cost.html
+++ b/en/cost.html
@@ -80,20 +80,49 @@
   </div>
   <!--container-->
   <div id="container">
-  </div>
+    <div id="container" class="middle">
+      <h1>Cost of dormitory</h1>
+      <table>
+        <tr>
+          <th>Accommodation fee</th>
+          <td>monthly amount (sum)</td>
+          <td>700 yen</td>
+        </tr>
+        <tr>
+          <th>Cost of meals (3 meals a day)</th>
+          <td>monthly amount (sum)</td>
+          <td>37,200 yen</td>
+        </tr>
+        <tr>
+          <th>Light and water heating fees, etc.</th>
+          <td>monthly amount (sum)</td>
+          <td>7,500 yen</td>
+        </tr>
+        <tr>
+          <th>Entrance Fee</th>
+          <td>When you enter the dormitory</td>
+          <td>1,000 yen</td>
+        </tr>
+        <tr>
+          <th>Squatter's Association Fee</th>
+          <td>Yearly Amount</td>
+          <td>1,500 yen</td>
+        </tr>
+      </table>
+    </div>
 
-  <!--footer-->
-  <div class="footer">
-    <img src="../img/footer.png">
-    <a href="site.html">
-      <p><span id="site">About this site</span></p>
-    </a>
-    <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
-  </div>
+    <!--footer-->
+    <div class="footer">
+      <img src="../img/footer.png">
+      <a href="site.html">
+        <p><span id="site">About this site</span></p>
+      </a>
+      <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
+    </div>
 
-  <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="../script/common.js"></script>
-  <!--JS取り込み-->
+    <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
+    <script src="../script/common.js"></script>
+    <!--JS取り込み-->
 </body>
 
 </html>
