--- a/en/event.html
+++ b/en/event.html
@@ -80,6 +80,115 @@
   </div>
   <!--container-->
   <div id="container">
+    <div class="pair-right">
+      <img src="../img/OverViewSky.JPG">
+      <div>
+        <h4>Dormitory students life</h4>
+        <p class="right-content">
+          　At the Takajo Dormitory, we see the dormitory as "a place to enhance one's value and sense of worth while caring for others," and aim to create a
+          dormitory that<br>
+          ・Safe and comfortable dormitory<br>
+          ・A dormitory where you can study<br>
+          ・A dormitory full of love and virtue<br>
+          ・Energetic dormitory<br>
+          ・Fun dormitory<br>
+          ・Clean dormitory<br>
+          ・Disciplined dormitory<br>
+        </p>
+      </div>
+    </div>
+    <h4>Events at Takajo Dormitory</h4>
+    <div class="content" style="margin-bottom: 50px;">
+      　At the Takajo Dormitory, we value the autonomy of our residents, and the Dormitory Student Association takes the lead in various matters related to
+      dormitory life.
+      Throughout the year, various events are held, such as the welcome match for new residents and the farewell party, and these events are also planned and
+      organized by the dormitory student association.<br>
+      　In terms of studying, it is easier to consult with classmates and upperclassmen than with commuting students. In addition, study sessions are held in the
+      cafeteria before exams.
+    </div>
+
+    <table>
+      <tr>
+        <th>April</th>
+        <td>Entrance ceremony<br>
+          Leader training session for the first semester<br>
+          First Semester Dormitory Students' Meeting<br>
+          New resident meeting ceremony<br>
+          Welcome match for new dormitory students
+        </td>
+      </tr>
+      <tr>
+        <th>May</th>
+        <td>
+          EmergencyDrill<br>
+          Study meeting
+        </td>
+      </tr>
+      <tr>
+        <th>June</th>
+        <td>
+          Parent-teacher's meeting<br>
+          Dormitory Student Match
+        </td>
+      </tr>
+      <tr>
+        <th>July</th>
+        <td>
+          Tanabata Party<br>
+          Study meeting<br>
+          Dormitory tour
+        </td>
+      </tr>
+      <tr>
+        <th>August</th>
+        <td>Closing a dormitory</td>
+      </tr>
+      <tr>
+        <th>September</th>
+        <td>
+          Opening a dormitory<br>
+          Second semester leadership training session
+        </td>
+      </tr>
+      <tr>
+        <th>October</th>
+        <td>
+          General meeting of late dormitory students<br>
+          Parent-teacher's meeting
+        </td>
+      </tr>
+      <tr>
+        <th>November</th>
+        <td>
+          Dormitory festival<br>
+          Study meeting<br>
+          Dormitory tour
+        </td>
+      </tr>
+      <tr>
+        <th>December</th>
+        <td>
+          Farewell party for graduates<br>
+          Closing a dormitory
+        </td>
+      </tr>
+      <tr>
+        <th>January</th>
+        <td>
+          Opening a dormitory<br>
+          Dormitory Student Council Election<br>
+          Study meeting<br>
+          Dormitory Student Association Officers' Handover Meeting<br>
+        </td>
+      </tr>
+      <tr>
+        <th>February</th>
+        <td>
+          Graduation party<br>
+          Closing a dormitory
+        </td>
+      </tr>
+    </table>
   </div>
 
   <!--footer-->
