--- a/en/facility.html
+++ b/en/facility.html
@@ -36,6 +36,21 @@
   <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
+  <style>
+    @media screen and (min-width: 870px) {
+      #top_image {
+        width: 800px;
+        margin: auto;
+      }
+    }
+
+    @media screen and (max-width: 870px) {
+      #top_image {
+        width: 80vw;
+        margin: auto;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -80,6 +95,18 @@
   </div>
   <!--container-->
   <div id="container">
+    <h1>Facility</h1>
+    <div><img id="top_image" src="../img/OverView.jpg" alt="Overview of the dormitory."></div>
+    <img src="../img/Facility/SingleRoom.jpg" alt="Image of a single room.">
+    <img src="../img/Facility/DoubleRoom.jpg" alt="Image of the two-person room.">
+    <img src="../img/Facility/KitchenSpace.jpg" alt="Image of the kitchen space.">
+    <img src="../img/Facility/LearningRoom.jpg" alt="Image of the learning space.">
+    <img src="../img/Facility/ShowerRoom.jpg" alt="Image of the shower room.">
+    <img src="../img/Facility/Bath.jpg" alt="Image of the bathroom.">
+    <img src="../img/Facility/WashingRoom.jpg" alt="Image of the laundry area.">
+    <img src="../img/Facility/Cafeteria.jpg" alt="Image of the cafeteria.">
+    <img src="../img/Facility/ElectricBicycle.jpg" alt="Image of electric bicycles.">
+    <img src="../img/Facility/BicycleSpace.jpg" alt="Image of bicycle parking lot.">
   </div>
 
   <!--footer-->
