--- a/en/index.html
+++ b/en/index.html
@@ -88,7 +88,7 @@
   <!--container-->
   <div id="container">
     <div id="page_top"><a href="#"></a></div>
-    <div class="pair">
+    <div class="pair-left">
       <div id="notice">
         <h2 id="notice-title">Recent Notice</h2>
         <section id="notice-inner">
@@ -102,7 +102,7 @@
           <h3><i class="fas fa-graduation-cap"></i> Support Education</h3>
         </a>
         <a href="env.html">
-          <h3><i class="fas fa-broom"></i> Improve Enviroment</h3>
+          <h3><i class="fas fa-broom"></i> Improve LivingEnv</h3>
         </a>
         <a href="meet.html">
           <h3><i class="fas fa-futbol"></i> Exchange Event</h3>
