--- a/en/purpose.html
+++ b/en/purpose.html
@@ -80,7 +80,62 @@
   </div>
   <!--container-->
   <div id="container">
+    <div class="pair-right">
+      <img src="../img/OverView.jpg">
+      <div>
+        <h4>Purpose</h4>
+        <p class="right-content">　The purpose of this dormitory is to contribute to the achievement of educational goals by providing convenience to students in
+          their studies and fostering their personal development.<br>
+          　The selection of applicants to the dormitory will be made in accordance with the above objectives.<br>　Therefore, the necessity of accommodations for
+          study will be reviewed by the selection committee, but
+          <span style="font-weight: bold">students from the suburbs will also be accepted ,depending on the capacity and willingness to study.</span>
+        </p>
+      </div>
+    </div>
+    <div class="pair-left">
+      <div>
+        <h4>Role as educational dormitory</h4>
+        <h5>ⅰ Human development</h5>
+        <div class="left-content">
+          <p>　Many students, from first-year students to majors, live in the same dormitory.If you are a freshman, you will have four grades of seniors. When
+            you enter the fifth grade, you will have four grades of juniors, and you will be able to build relationships with both seniors and juniors.<br>
+            　By living in such an environment, students learn to cooperate with other students in the dormitory, to be responsible for their dormitory and
+            school life, to follow the rules of the dormitory, the university, and society, and to be considerate of others. These skills will be very useful
+            when they enter the world of work.</p>
+        </div>
+        <h5>ⅱ Training in greetings</h5>
+        <div class="left-content">
+          <p>　You will be able to greet people, speak clearly, and act positively, which is difficult for ordinary people to do. You will be able to greet
+            people, speak clearly, and act positively. Even when they leave the dormitory, they will be able to acquire the habit of doing these things
+            properly.</p>
+        </div>
+        <h5>ⅲ Ideal for studying and club activities</h5>
+        <div class="left-content">
+          <p>　In the dormitory, students can directly ask their seniors and classmates what they do not understand in their studies. Because of this, the
+            students in the dormitory get good grades on average.<br>
+            　Many of our students go on to universities and majors.<br>
+            　In addition, since the commute to school is extremely short, only about 5 minutes, students can use this time for club activities and make
+            effective use of their time.</p>
+        </div>
+      </div>
+      <img class="Vertically-img" src="../img/RadioCalisthenics.png">
+    </div>
+    <h4>Status of Takajo Dormitory</h4>
+    <div class="content">
+      <p>　The dormitory has a capacity of 120 students in the men's dormitory and 31 students in the women's dormitory, for a total of 151 students. Some of
+        these students are international students.<br>
+        　The school dormitory has a dormitory students' association made up of all the dormitory students, and this organization voluntarily manages specific
+        matters of daily life
+        under the guidance of the school.<br>
+        　There are a lot of rules and regulations for group living in the dormitory, and we encourage all residents to follow them. We also plan and carry out
+        annual events for fellowship and interaction, and if there is anything that needs to be improved in our own lives, we discuss it together and make
+        requests.<br>
+        　The Dormitory Student Association is a small organization, but it has a board of directors and various subcommittees, and many dormitory students
+        participate in some way to make the dormitory a fun and safe place to live.<br>
+        　In addition, first-year students are assigned a resident advisor to provide guidance and counseling.</p>
+    </div>
   </div>
+
 
   <!--footer-->
   <div class="footer">
