change '日本語' to 'JAPANESE'

--- a/en/cost.html
+++ b/en/cost.html
@@ -36,6 +36,11 @@
   <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
+  <style>
+    #container table th {
+      border-bottom: solid 2px #fb5144;
+    }
+  </style>
 </head>
 
 <body>
@@ -64,7 +69,7 @@
           <div class="gcse-search"></div>
         </div>
         <li><a href="../index.html">
-            <h3 class="lang">日本語</h3>
+            <h3 class="lang">JAPANESE</h3>
           </a></li>
         <li><a href="location.html">
             <h3 class="access">Location</h3>
@@ -85,17 +90,17 @@
       <table>
         <tr>
           <th>Accommodation fee</th>
-          <td>monthly amount (sum)</td>
+          <td>monthly amount</td>
           <td>700 yen</td>
         </tr>
         <tr>
           <th>Cost of meals (3 meals a day)</th>
-          <td>monthly amount (sum)</td>
+          <td>monthly amount</td>
           <td>37,200 yen</td>
         </tr>
         <tr>
           <th>Light and water heating fees, etc.</th>
-          <td>monthly amount (sum)</td>
+          <td>monthly amount</td>
           <td>7,500 yen</td>
         </tr>
         <tr>
