--- a/en/facility.html
+++ b/en/facility.html
@@ -79,7 +79,7 @@
           <div class="gcse-search"></div>
         </div>
         <li><a href="../index.html">
-            <h3 class="lang">日本語</h3>
+            <h3 class="lang">JAPANESE</h3>
           </a></li>
         <li><a href="location.html">
             <h3 class="access">Location</h3>
