update table style

--- a/en/cost.html
+++ b/en/cost.html
@@ -37,7 +37,8 @@
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
   <style>
-    #container table th {
+    #container .table-header {
+      padding: 3px;
       border-bottom: solid 2px #fb5144;
     }
   </style>
@@ -89,27 +90,27 @@
       <h1>Cost of dormitory</h1>
       <table>
         <tr>
-          <th>Accommodation fee</th>
+          <th><span class="table-header">Accommodation fee</span></th>
           <td>monthly amount</td>
           <td>700 yen</td>
         </tr>
         <tr>
-          <th>Cost of meals (3 meals a day)</th>
+          <th><span class="table-header">Cost of meals (3 meals a day)</span></th>
           <td>monthly amount</td>
           <td>37,200 yen</td>
         </tr>
         <tr>
-          <th>Light and water heating fees, etc.</th>
+          <th><span class="table-header">Light and water heating fees, etc.</span></th>
           <td>monthly amount</td>
           <td>7,500 yen</td>
         </tr>
         <tr>
-          <th>Entrance Fee</th>
+          <th><span class="table-header">Entrance Fee</span></th>
           <td>When you enter the dormitory</td>
           <td>1,000 yen</td>
         </tr>
         <tr>
-          <th>Squatter's Association Fee</th>
+          <th><span class="table-header">Squatter's Association Fee</span></th>
           <td>Yearly Amount</td>
           <td>1,500 yen</td>
         </tr>
