--- a/html/cost.html
+++ b/html/cost.html
@@ -36,6 +36,12 @@
   <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
+  <style>
+    #container .table-header {
+      padding: 3px;
+      border-bottom: solid 2px #fb5144;
+    }
+  </style>
 </head>
 
 <body>
@@ -80,27 +86,27 @@
     <h1>学寮経費</h1>
     <table>
       <tr>
-        <th>寄宿料</th>
+        <th><span class="table-header">寄宿料</span></th>
         <td>月額</td>
         <td>700円</td>
       </tr>
       <tr>
-        <th>食費(1日3食)</th>
+        <th><span class="table-header">食費(1日3食)</span></th>
         <td>月額</td>
         <td>37,200円</td>
       </tr>
       <tr>
-        <th>寮費(光熱水費等)</th>
+        <th><span class="table-header">寮費(光熱水費等)</span></th>
         <td>月額</td>
         <td>7,500円</td>
       </tr>
       <tr>
-        <th>入寮費</th>
+        <th><span class="table-header">入寮費</span></th>
         <td>入寮時</td>
         <td>1,000円</td>
       </tr>
       <tr>
-        <th>寮生会費</th>
+        <th><span class="table-header">寮生会費</span></th>
         <td>年額</td>
         <td>1,500円</td>
       </tr>
