--- a/en/facility.html
+++ b/en/facility.html
@@ -102,11 +102,14 @@
     <img src="../img/Facility/KitchenSpace.jpg" alt="Image of the kitchen space.">
     <img src="../img/Facility/LearningRoom.jpg" alt="Image of the learning space.">
     <img src="../img/Facility/ShowerRoom.jpg" alt="Image of the shower room.">
-    <img src="../img/Facility/Bath.jpg" alt="Image of the bathroom.">
-    <img src="../img/Facility/WashingRoom.jpg" alt="Image of the laundry area.">
-    <img src="../img/Facility/Cafeteria.jpg" alt="Image of the cafeteria.">
-    <img src="../img/Facility/ElectricBicycle.jpg" alt="Image of electric bicycles.">
-    <img src="../img/Facility/BicycleSpace.jpg" alt="Image of bicycle parking lot.">
+    <img src="../img/Facility/Bath" alt="Image of the bathroom.">
+    <img src="../img/Facility/WashingRoom" alt="Image of the laundry area.">
+    <img src="../img/Facility/Cafeteria" alt="Image of the cafeteria.">
+    <img src="../img/Facility/Bookshelf" alt="Image of Bookshelf">
+    <img src="../img/Facility/PC" alt="Image of PC,printer">
+    <img src="../img/Facility/3DPrinter" alt="Image of 3D printer">
+    <img src="../img/Facility/ElectricBicycle" alt="Image of electric bicycles.">
+    <img src="../img/Facility/BicycleSpace" alt="Image of bicycle parking lot.">
   </div>
 
   <!--footer-->
