--- a/en/it.html
+++ b/en/it.html
@@ -36,6 +36,32 @@
   <!--タイトル-->
   <meta property="og:locale" content="ja_JP" />
   <!--言語設定-->
+  <style>
+    .TextTyping span {
+      display: none;
+    }
+
+    @keyframes typinganime {
+      from {
+        opacity: 0
+      }
+
+      to {
+        opacity: 1
+      }
+    }
+
+    .message {
+      margin-left: 10vw;
+      margin-top: 200px;
+      font-size: 54px;
+      line-height: 1.92;
+    }
+
+    .message p {
+      margin: 0;
+    }
+  </style>
 </head>
 
 <body>
