--- a/html/event.html
+++ b/html/event.html
@@ -77,11 +77,11 @@
   </div>
   <!--container-->
   <div id="container">
-    <div class="pair-left">
+    <div class="pair-right">
       <img src="../img/OverViewSky.JPG">
       <div>
         <h4>寮生活</h4>
-        <p class="container">
+        <p class="right-content">
           　高城寮では寮を「他人を思いやりながら、自分の価値と価値観を高める場」とし、次のような寮を目指しています。<br>
           ・住みよい安全な寮<br>
           ・勉強のできる寮<br>
@@ -93,108 +93,96 @@
         </p>
       </div>
     </div>
-    <div class="pair-right">
-      <h4>高城寮の行事</h4>
-      <div>
-        　高城寮では寮生の自主性を重んじ、寮生活に関わるさまざまな事柄を寮生会が中心となって行っています。
-        年間を通し、新入寮生歓迎マッチや予餞会など各種のイベントが行われていますが、これらのイベントも寮生会が中心となり企画・運営しています。<br>
-        　勉強面では通学生と比較して同級生や上級生に相談しやすい環境だといえるでしょう。また、試験前には食堂にて勉強会を行っています。
-      </div>
-      <br>
-      <!--追加項目はここより下に-->
-
+    <h4>高城寮の行事</h4>
+    <div class="content" style="margin-bottom: 50px;">
+      　高城寮では寮生の自主性を重んじ、寮生活に関わるさまざまな事柄を寮生会が中心となって行っています。
+      年間を通し、新入寮生歓迎マッチや予餞会など各種のイベントが行われていますが、これらのイベントも寮生会が中心となり企画・運営しています。<br>
+      　勉強面では通学生と比較して同級生や上級生に相談しやすい環境だといえるでしょう。また、試験前には食堂にて勉強会を行っています。
     </div>
-  </div>
 
-  <table>
-    <tr>
-      <th scope="col"></th>
-      <th scope="col">主な年間行事</th>
-    </tr>
-    <tr>
-      <th>4月</th>
-      <td>
-        ・入寮式<br>
-        ・前期リーダー研修会<br>
-        ・前期寮生総会<br>
-        ・新入寮生対面式<br>
-        ・新入寮生歓迎マッチ
-      </td>
-    </tr>
-    <tr>
-      <th>5月</th>
-      <td>
-        ・避難訓練<br>
-        ・勉強会
-      </td>
-    </tr>
-    <tr>
-      <th>6月</th>
-      <td>
-        ・保護者会<br>
-        ・寮生マッチ
-      </td>
-    </tr>
-    <tr>
-      <th>7月</th>
-      <td>
-        ・七夕会<br>
-        ・勉強会<br>
-        ・学寮見学会
-      </td>
-    </tr>
-    <tr>
-      <th>8月</th>
-      <td>・閉寮</td>
-    </tr>
-    <tr>
-      <th>9月</th>
-      <td>
-        ・開寮<br>
-        ・後期リーダー研修会
-      </td>
-    </tr>
-    <tr>
-      <th>10月</th>
-      <td>
-        ・後期寮生総会<br>
-        ・保護者会
-      </td>
-    </tr>
-    <tr>
-      <th>11月</th>
-      <td>
-        ・寮祭<br>
-        ・勉強会<br>
-        ・学寮見学会
-      </td>
-    </tr>
-    <tr>
-      <th>12月</th>
-      <td>
-        ・予餞会<br>
-        ・閉寮
-      </td>
-    </tr>
-    <tr>
-      <th>1月</th>
-      <td>
-        ・開寮<br>
-        ・寮生会選挙<br>
-        ・勉強会<br>
-        ・寮生会役員引継会<br>
-      </td>
-    </tr>
-    <tr>
-      <th>2月</th>
-      <td>
-        ・卒寮会<br>
-        ・閉寮
-      </td>
-    </tr>
-  </table>
+    <table>
+      <tr>
+        <th>4月</th>
+        <td>入寮式<br>
+          前期リーダー研修会<br>
+          前期寮生総会<br>
+          新入寮生対面式<br>
+          新入寮生歓迎マッチ
+        </td>
+      </tr>
+      <tr>
+        <th>5月</th>
+        <td>
+          避難訓練<br>
+          勉強会
+        </td>
+      </tr>
+      <tr>
+        <th>6月</th>
+        <td>
+          保護者会<br>
+          寮生マッチ
+        </td>
+      </tr>
+      <tr>
+        <th>7月</th>
+        <td>
+          七夕会<br>
+          勉強会<br>
+          学寮見学会
+        </td>
+      </tr>
+      <tr>
+        <th>8月</th>
+        <td>閉寮</td>
+      </tr>
+      <tr>
+        <th>9月</th>
+        <td>
+          開寮<br>
+          後期リーダー研修会
+        </td>
+      </tr>
+      <tr>
+        <th>10月</th>
+        <td>
+          後期寮生総会<br>
+          保護者会
+        </td>
+      </tr>
+      <tr>
+        <th>11月</th>
+        <td>
+          寮祭<br>
+          勉強会<br>
+          学寮見学会
+        </td>
+      </tr>
+      <tr>
+        <th>12月</th>
+        <td>
+          予餞会<br>
+          閉寮
+        </td>
+      </tr>
+      <tr>
+        <th>1月</th>
+        <td>
+          開寮<br>
+          寮生会選挙<br>
+          勉強会<br>
+          寮生会役員引継会<br>
+        </td>
+      </tr>
+      <tr>
+        <th>2月</th>
+        <td>
+          卒寮会<br>
+          閉寮
+        </td>
+      </tr>
+    </table>
   </div>
-
   <!--footer-->
   <div class="footer">
     <img src="../img/footer.png">
