--- a/html/facility.html
+++ b/html/facility.html
@@ -39,15 +39,23 @@
   <style>
     @media screen and (min-width: 870px) {
       #top_image {
+        text-align: center;
+      }
+
+      #top_image img {
         width: 800px;
-        margin: auto;
+        height: 629px;
       }
     }
 
     @media screen and (max-width: 870px) {
       #top_image {
+        text-align: center;
+      }
+
+      #top_image img {
         width: 80vw;
-        margin: auto;
+
       }
     }
   </style>
@@ -92,18 +100,33 @@
   </div>
   <!--container-->
   <div id="container">
-    <h1>Facility</h1>
-    <div><img id="top_image" src="../img/OverView.jpg" alt="寮の外観"></div>
+    <h4>設備</h4><br>
     <img src="../img/Facility/SingleRoom.jpg" alt="一人部屋の画像">
+    <p>一人部屋</p>
     <img src="../img/Facility/DoubleRoom.jpg" alt="二人部屋の画像">
+    <p>二人部屋</p>
     <img src="../img/Facility/KitchenSpace.jpg" alt="キッチンスペースの画像">
+    <p>キッチンスペース</p>
     <img src="../img/Facility/LearningRoom.jpg" alt="ラーニングスペースの画像">
+    <p>ラーニングスペース</p>
     <img src="../img/Facility/ShowerRoom.jpg" alt="シャワー室の画像">
-    <img src="../img/Facility/Bath.jpg" alt="浴室の画像">
-    <img src="../img/Facility/WashingRoom.jpg" alt="洗濯場の画像">
-    <img src="../img/Facility/Cafeteria.jpg" alt="食堂の画像">
-    <img src="../img/Facility/ElectricBicycle.jpg" alt="電動自転車の画像">
-    <img src="../img/Facility/BicycleSpace.jpg" alt="駐輪場の画像">
+    <p>シャワー室</p>
+    <img src="../img/Facility/Bath" alt="浴室の画像">
+    <p>浴室</p>
+    <img src="../img/Facility/WashingRoom" alt="洗濯場の画像">
+    <p>洗濯場</p>
+    <img src="../img/Facility/Cafeteria" alt="食堂の画像">
+    <p>食堂</p>
+    <img src="../img/Facility/Bookshelf" alt="本棚の画像">
+    <p>本棚</p>
+    <img src="../img/Facility/PC" alt="食堂のPC,プリンタの画像">
+    <p>PC,プリンタ</p>
+    <img src="../img/Facility/3DPrinter" alt="3Dプリンタの画像">
+    <p>3Dプリンタ</p>
+    <img src="../img/Facility/ElectricBicycle" alt="電動自転車の画像">
+    <p>電動自転車</p>
+    <img src="../img/Facility/BicycleSpace" alt="駐輪場の画像">
+    <p>駐輪場</p>
   </div>
 
   <!--footer-->
