--- a/html/site.html
+++ b/html/site.html
@@ -64,7 +64,7 @@
           <div class="gcse-search"></div>
         </div>
         <li><a href="../en/index.html">
-            <h3 class="lang">ENGLISH</h3>
+            <h4 class="lang">ENGLISH</h4>
           </a></li>
         <li><a href="purpose.html">寮の目的</a></li>
         <li><a href="facility.html">施設,設備</a></li>
@@ -77,33 +77,30 @@
   </div>
   <!--container-->
   <div id="container">
-    <h2>
-      <div class="border border-primary">本サイトについて</div>
-    </h2>
-    <h3>目的</h3>
-    <div> 徳山工業高等専門学校高城寮(以下，高城寮)が設置・運営するウェブサイトは、
-      高城寮の活動を学内外に公開するとともに、寮生の生活を支援する情報を提供することを目的としています。
+    <div>
+      <h1 class="middle">本サイトについて</h1>
+      <h4>目的</h4>
+      <p class="content"> 徳山工業高等専門学校高城寮(以下，高城寮)が設置・運営するウェブサイトは、
+        高城寮の活動を学内外に公開するとともに、寮生の生活を支援する情報を提供することを目的としています。
+      </p>
+      <h4>制作</h4>
+      <p class="content"> 本サイトは、2020年~2021年に高城寮にて行われた、「高城寮をより住みやすい生活の場にするためのアイディア」のプロジェクトとして寮生が制作しています。<br>
+        ホームページのソースコードは、GitHubで公開しています。<a target="_blank" href="https://github.com/TakajoDormitory/HomePage">ソースコード</a><br>
+        また、高城寮は寮生の情報技術の活用を積極的に支援しています。詳しくは、<a href="it.html">情報技術の活用</a>のページをご覧ください。</p>
+      <h4>著作権</h4>
+      <p class="content">高城寮ウェブサイトが提供するコンテンツの著作権は、高城寮に帰属します。
+        著作権法が定める範囲を除き、高城寮の許可なく複写・複製，転用，販売などの二次利用をすることを禁止します。
+      </p>
+      <h4>免責事項</h4>
+      <p class="content">高城寮ウェブサイトの情報は、事前告知なく変更・削除されます。
+        また、正確性には十分配慮しておりますが、高城寮ウェブサイトの情報により生じた不利益について高城寮は責任を負いません。
+      </p>
+      <h4>リンク</h4>
+      <p class="content">高城寮ウェブサイトへのリンクは自由にしていただいて構いませんが、
+        urlの変更・削除について告知いたしません。また、高城寮の活動の趣旨に反するサイト（公序良俗に反する、合法性に懸念があるなど）からの
+        リンクを禁止します。
+      </p>
     </div>
-    <!--上ボーダー -->
-    <br>
-    <h3>著作権</h3>
-    <div>高城寮ウェブサイトが提供するコンテンツの著作権は、高城寮に帰属します。
-      著作権法が定める範囲を除き、高城寮の許可なく複写・複製，転用，販売などの二次利用をすることを禁止します。
-    </div>
-    <br>
-    <h3>免責事項</h3>
-    <div>高城寮ウェブサイトの情報は、事前告知なく変更・削除されます。
-      また、正確性には十分配慮しておりますが、高城寮ウェブサイトの情報により生じた不利益について高城寮は責任を負いません。
-    </div>
-    <br>
-    <h3>リンク</h3>
-    <div>高城寮ウェブサイトへのリンクは自由にしていただいて構いませんが、
-      urlの変更・削除について告知いたしません。また、高城寮の活動の趣旨に反するサイト（公序良俗に反する、合法性に懸念があるなど）からの
-      リンクを禁止します。
-    </div>
-    <!--上ボーダー -->
-
-
   </div>
 
   <!--footer-->
