--- a/html/studying.html
+++ b/html/studying.html
@@ -77,6 +77,11 @@
   </div>
   <!--container-->
   <div id="container">
+    <h4>学習面のサポート</h4>
+    <p class="content">　高城寮では、寮生が学習しやすいように様々なサポートを行っています。食堂には、全寮生が自由に使用できる本棚やPCが置いてあり、寮生が各自の勉強に役立てています。<br>
+      　寮生会には指導寮生長や学習相談員がおり、寮生の学習の相談に乗ったりしています。定期試験の際には勉強会が行われ、寮生が食堂に集って勉強します。わからないところがあれば、学習相談員にすぐに質問できるため、学びやすい環境といえます。</p>
+    <img src="../img/Facility/" alt="食堂の本棚">
+    <img src="../img/" alt="勉強会">
   </div>
 
   <!--footer-->
@@ -88,9 +93,9 @@
     <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
   </div>
 
-  <script src="../script/common.js"></script>
   <!--JS取り込み-->
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
+  <script src="../script/common.js"></script>
 </body>
 
 </html>
