--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <!--container-->
   <div id="container">
     <div id="page_top"><a href="#"></a></div>
-    <div class="pair">
+    <div class="pair-left">
       <div id="notice">
         <h2 id="notice-title">お知らせ</h2>
         <section id="notice-inner">
