--- a/html/meet.html
+++ b/html/meet.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="../style/common.css" type="text/css">
   <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/logo.png" sizes="32x32" />
+  <link rel="icon" href="../img/icon.png" sizes="32x32" />
   <!--サイトアイコン-->
-  <link rel="icon" href="../Img/logo.png" sizes="192x192" />
+  <link rel="icon" href="../img/icon.png" sizes="192x192" />
   <!--サイトアイコン-->
   <link rel="apple-touch-icon-precomposed" href="image/ImageSource.png" />
   <!--Apple用サイトアイコン-->
